# Acelab_code_assesment_2026

./: SOLUTION.md  agent.py  app.py  pyproject.toml
templates/: index.html
